--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -601,6 +601,10 @@ h6 {
   margin-right: 6px;
 }
 
+.logo{
+  max-height: 200px !important;
+}
+
 .footer .footer-about .logo span {
   font-size: 26px;
   font-weight: 700;
