--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1033,7 +1033,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# About Section
+# A propos Section
 --------------------------------------------------------------*/
 .about h3 {
   font-weight: 700;
